--- a/canceled.html
+++ b/canceled.html
@@ -15,7 +15,7 @@
     <div class="sr-root">
       <div class="sr-main">
         <header class="sr-header">
-          <a href="/" class="sr-header__logo"></a>
+          <a href="./" class="sr-header__logo"></a>
         </header>
         <div class="sr-payment-summary completed-view">
           <h1>Your test payment was canceled</h1>
