--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Stripe Payment Page Recipe</title>
-    <meta name="description" content="A demo of Stripe Payment Intents" />
+    <title>Stripe Checkout Sample</title>
+    <meta name="description" content="A demo of Stripe client-only Checkout" />
 
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -21,13 +21,31 @@
         <div class="sr-container">
           <section class="container">
             <h1>One-time Donation</h1>
-            <button data-sku-id="sku_GU4JYXyvvRb2sX">Donate $5.00 once</button>
-            <button data-sku-id="sku_GU4KO8nfdg8G2Z">Donate $15.00 once</button>
-            <button data-sku-id="sku_GU4LB0wBViiYsm">Donate $50.00 once</button>
+            <button
+              data-checkout-mode="payment"
+              data-price-id="sku_GU4JYXyvvRb2sX"
+            >
+              Donate $5.00 once
+            </button>
+            <button
+              data-checkout-mode="payment"
+              data-price-id="sku_GU4KO8nfdg8G2Z"
+            >
+              Donate $15.00 once
+            </button>
+            <button
+              data-checkout-mode="payment"
+              data-price-id="sku_GU4LB0wBViiYsm"
+            >
+              Donate $50.00 once
+            </button>
           </section>
           <section class="container">
             <h1>Recurring Donation</h1>
-            <button data-plan-id="plan_GU4MXg0k0Uv1S6">
+            <button
+              data-checkout-mode="subscription"
+              data-price-id="plan_GU4MXg0k0Uv1S6"
+            >
               Donate $20.00 per month
             </button>
           </section>
@@ -50,43 +68,42 @@
 
     <script>
       // Replace with your own publishable key: https://dashboard.stripe.com/test/apikeys
-      var PUBLISHABLE_KEY = "pk_test_Tr8olTkdFnnJVywwhNPHwnHK00HkHV4tnP";
+      var PUBLISHABLE_KEY = 'pk_test_Tr8olTkdFnnJVywwhNPHwnHK00HkHV4tnP';
       // Replace with the domain you want your users to be redirected back to after payment
-      var DOMAIN = location.href.replace(/[^/]*$/, "");
+      var DOMAIN = location.href.replace(/[^/]*$/, '');
 
-      if (PUBLISHABLE_KEY === "pk_test_Tr8olTkdFnnJVywwhNPHwnHK00HkHV4tnP") {
+      if (PUBLISHABLE_KEY === 'pk_test_Tr8olTkdFnnJVywwhNPHwnHK00HkHV4tnP') {
         console.log(
-          "Replace the hardcoded publishable key with your own publishable key: https://dashboard.stripe.com/test/apikeys"
+          'Replace the hardcoded publishable key with your own publishable key: https://dashboard.stripe.com/test/apikeys'
         );
       }
 
       var stripe = Stripe(PUBLISHABLE_KEY);
 
       // Handle any errors from Checkout
-      var handleResult = function(result) {
+      var handleResult = function (result) {
         if (result.error) {
-          var displayError = document.getElementById("error-message");
+          var displayError = document.getElementById('error-message');
           displayError.textContent = result.error.message;
         }
       };
 
-      document.querySelectorAll("button").forEach(function(button) {
-        button.addEventListener("click", function(e) {
-          var skuId = e.target.dataset.skuId;
-          var planId = e.target.dataset.planId;
-          var items = skuId
-            ? [{ sku: skuId, quantity: 1 }]
-            : [{ plan: planId, quantity: 1 }];
+      document.querySelectorAll('button').forEach(function (button) {
+        button.addEventListener('click', function (e) {
+          var mode = e.target.dataset.checkoutMode;
+          var priceId = e.target.dataset.priceId;
+          var items = [{ price: priceId, quantity: 1 }];
 
           // Make the call to Stripe.js to redirect to the checkout page
           // with the sku or plan ID.
           stripe
             .redirectToCheckout({
-              items: items,
+              mode: mode,
+              lineItems: items,
               successUrl:
-                DOMAIN + "success.html?session_id={CHECKOUT_SESSION_ID}",
+                DOMAIN + 'success.html?session_id={CHECKOUT_SESSION_ID}',
               cancelUrl:
-                DOMAIN + "canceled.html?session_id={CHECKOUT_SESSION_ID}"
+                DOMAIN + 'canceled.html?session_id={CHECKOUT_SESSION_ID}',
             })
             .then(handleResult);
         });
